# sim_demo_collector

./: .gitignore  .gitmodules  README.md  collect_demos.py  pyproject.toml  setup.py
demos/lift_image/episodes.zarr/action/: .zarray  0.0  1.0  10.0  11.0  2.0  3.0  4.0  5.0  6.0  7.0  8.0  9.0
demos/lift_image/episodes.zarr/agentview_image/: 0.0.0.0  1.0.0.0  10.0.0.0  11.0.0.0  2.0.0.0  3.0.0.0  4.0.0.0  5.0.0.0  (+4 more)
examples/: append_zarr.py  convert_format.py  test.py  test.zarr.py  visualize.py  visualize_image.py  visualize_pc.py
sim_demo_collector/config/: config.yaml
sim_demo_collector/config/runner/: diffusion_policy_runner.yaml
sim_demo_collector/config/task/: can_image.yaml  lift_image.yaml  lift_pc.yaml  lift_pcd.yaml  mimicgen_assembly_image.yaml  mimicgen_assembly_pc.yaml  mimicgen_stack_three_image.yaml  mimicgen_stack_three_pc.yaml  mimicgen_threading_image.yaml  mimicgen_threading_pc.yaml  robosuite_can_image.yaml  robosuite_can_pc.yaml  robosuite_door_image.yaml  robosuite_lift_image.yaml  robosuite_lift_pc.yaml  robosuite_square_image.yaml  robosuite_square_pc.yaml  robosuite_stack_image.yaml  robosuite_stack_pc.yaml  square_image.yaml
sim_demo_collector/env/: robosuite.py  robosuite_env.py
sim_demo_collector/runner/: diffusion_policy_runner.py
sim_demo_collector/util/: file_util.py  pc_util.py  pcd_util.py  transform_util.py
sim_demo_collector/wrapper/: data_recording_wrapper.py  diffusion_policy_robosuite_wrapper.py  multistep_wrapper.py
test.zarr/action/: .zarray  0.0  1.0  2.0
test.zarr/frontview_image/: .zarray  0.0.0.0  1.0.0.0  2.0.0.0
test.zarr/frontview_pc/: .zarray  0.0.0  1.0.0  2.0.0
test.zarr/meta/episode_ends/: .zarray  0
test.zarr/robot0_eef_pos/: .zarray  0.0  1.0  2.0
test.zarr/robot0_eye_in_hand_image_mask/: .zarray  0.0.0.0  1.0.0.0  2.0.0.0
(+56 files in other folders)
