[build-system]
requires = ["setuptools>=62.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim_demo_collector"
version = "0.0.1"
description = "Expert demonstration collector in simulation"
authors = [
    { name = "Junlin Wang", email = "wangjl@seas.upenn.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "fpsample==0.3.3",
    "gymnasium==1.0.0",
    "hydra-core==1.3.2",
    "matplotlib==3.10.6",
    "numpy==1.25.0",
    "omegaconf==2.3.0",
    "open3d==0.19.0",
    "robomimic==0.2.0",
    "robosuite==1.4.0",
    "scipy==1.15.1",
    "tqdm==4.67.1",
    "zarr==2.17.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sim_demo_collector*"]